# invoice-detective

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  graph.db3
.github/workflows/: push-image.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/: Cargo.toml  invoices.csv  invoices.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/graph-builder/: Cargo.toml
crates/invoice-detective/: Cargo.toml
crates/invoice-detective/src/: graph_database.rs  lib.rs  node.rs  recipient.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/templates/: index.html.tera  invoice.html.tera
graph-builder/: Cargo.toml
graph-builder/src/: main.rs
invoice-detective/: Cargo.toml
invoice-detective/src/: chain_hash.rs  decoder.rs  lib.rs  offer_details.rs  recipient.rs
sample/: invoices.csv  offers.csv  refunds.csv  test-vector-offers.csv
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  recipient.rs
templates/: base.html.tera  index.html.tera  invoice.html.tera
