[package]
name = "invoice-detective"
version = "0.1.0"
edition = "2021"

[lib]
name = "invoice_detective"

[dependencies]
anyhow = "1.0.79"
bitcoin = { version = "=0.32.2", default-features = false }
lightning = { version = "0.0.125" }
lightning-invoice = "0.29.0"
lnurl-rs = { version = "0.4.1", default-features = false }
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
